--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -68,8 +68,8 @@
     <Compile Include="ImageEx\ImageEx.Members.cs" />
     <Compile Include="ImageEx\ImageEx.Placeholder.cs" />
     <Compile Include="ImageEx\ImageEx.Source.cs" />
-    <Compile Include="ImageEx\ImageFailedExEventArgs.cs" />
-    <Compile Include="ImageEx\ImageOpenedExEventArgs.cs" />
+    <Compile Include="ImageEx\ImageExFailedEventArgs.cs" />
+    <Compile Include="ImageEx\ImageExOpenedEventArgs.cs" />
     <Compile Include="RotatorTile\RotatorTile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PullToRefreshListView\PullToRefreshListView.cs" />
