--- a/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
@@ -302,7 +302,7 @@
     </Compile>
     <Compile Include="Common\Constants.cs" />
     <Compile Include="Common\DelegateCommand{T}.cs" />
-    <Compile Include="Common\SolidColorBrushConverter.cs" />
+    <Compile Include="Common\Models\SolidColorBrushConverter.cs" />
     <Compile Include="Common\DelegateCommand.cs" />
     <Compile Include="Common\Tools.cs" />
     <Compile Include="Controls\CodeRenderer\CodeRenderer.Properties.cs" />
@@ -312,12 +312,12 @@
     </Compile>
     <Compile Include="Data\PhotoDataItem.cs" />
     <Compile Include="Data\PhotosDataSource.cs" />
-    <Compile Include="Models\Item.cs" />
-    <Compile Include="Models\PropertyDescriptor\SliderPropertyOptions.cs" />
-    <Compile Include="Models\PropertyDescriptor\ValueHolder.cs" />
-    <Compile Include="Models\PropertyDescriptor\PropertyOptions.cs" />
-    <Compile Include="Models\PropertyDescriptor\PropertyKind.cs" />
-    <Compile Include="Models\PropertyDescriptor\PropertyDescriptor.cs" />
+    <Compile Include="Common\Models\Item.cs" />
+    <Compile Include="Common\Models\PropertyDescriptor\SliderPropertyOptions.cs" />
+    <Compile Include="Common\Models\PropertyDescriptor\ValueHolder.cs" />
+    <Compile Include="Common\Models\PropertyDescriptor\PropertyOptions.cs" />
+    <Compile Include="Common\Models\PropertyDescriptor\PropertyKind.cs" />
+    <Compile Include="Common\Models\PropertyDescriptor\PropertyDescriptor.cs" />
     <Compile Include="Common\BindableBase.cs" />
     <Compile Include="SamplePages\Bing Service\BingPage.xaml.cs">
       <DependentUpon>BingPage.xaml</DependentUpon>
@@ -391,10 +391,10 @@
     <Compile Include="Shell.xaml.cs">
       <DependentUpon>Shell.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\Option.cs" />
-    <Compile Include="Models\SampleCategory.cs" />
-    <Compile Include="Models\Sample.cs" />
-    <Compile Include="Models\Samples.cs" />
+    <Compile Include="Common\Models\Option.cs" />
+    <Compile Include="Common\Models\SampleCategory.cs" />
+    <Compile Include="Common\Models\Sample.cs" />
+    <Compile Include="Common\Models\Samples.cs" />
     <Compile Include="Pages\About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
     </Compile>
