AdMediator control added Fixes #363
Change AdDuplex ref to nuget pkg

specify x86 platform (required by ad sdk)

adding back 'Any CPU' config to satisfy nuget restore

--- a/Microsoft.Toolkit.Uwp.UI.Controls/project.json
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "AdDuplexWin10": "10.0.1.5",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "StyleCop.Analyzers": "1.0.0"
   },
