Updated code to change CompositionShadow name to DropShadowPanel.

--- a/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
@@ -232,9 +232,9 @@
     <Content Include="SamplePages\Bing Service\icon.png" />
     <Content Include="SamplePages\BladeControl\Blade.png" />
     <Content Include="SamplePages\Blur\BlurBehavior.png" />
-    <Content Include="SamplePages\DropShadow\DropShadow.png" />
-    <Content Include="SamplePages\DropShadow\Trex.png" />
-    <Content Include="SamplePages\DropShadow\Unicorn.png" />
+    <Content Include="SamplePages\DropShadowPanel\DropShadowPanel.png" />
+    <Content Include="SamplePages\DropShadowPanel\Trex.png" />
+    <Content Include="SamplePages\DropShadowPanel\Unicorn.png" />
     <Content Include="SamplePages\GridSplitter\GridSplitter.png" />
     <Content Include="SamplePages\Facebook Service\FacebookLogo.png" />
     <Content Include="SamplePages\FadeHeader\FadeHeaderBehavior.png" />
@@ -301,7 +301,7 @@
     <Content Include="SamplePages\FadeHeader\FadeHeaderBehaviorCode.bind" />
     <Content Include="SamplePages\FadeHeader\FadeHeaderBehaviorXaml.bind" />
     <Content Include="SamplePages\LinkedIn Service\LinkedInCode.bind" />
-    <Content Include="SamplePages\DropShadow\DropShadowXaml.bind" />
+    <Content Include="SamplePages\DropShadowPanel\DropShadowPanelXaml.bind" />
     <None Include="SamplePages\LiveTile\LiveTileCodeJavaScript.bind" />
     <Content Include="SamplePages\Toast\ToastCodeJavaScript.bind" />
     <None Include="SamplePages\WeatherLiveTileAndToast\WeatherLiveTileAndToastCodeJavaScript.bind" />
@@ -317,8 +317,8 @@
     <Compile Include="Common\SolidColorBrushConverter.cs" />
     <Compile Include="Common\DelegateCommand.cs" />
     <Compile Include="Common\Tools.cs" />
-    <Compile Include="SamplePages\DropShadow\DropShadowPage.xaml.cs">
-      <DependentUpon>DropShadowPage.xaml</DependentUpon>
+    <Compile Include="SamplePages\DropShadowPanel\DropShadowPanelPage.xaml.cs">
+      <DependentUpon>DropShadowPanelPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="SamplePages\Facebook Service\FacebookPhotoTemplateSelector.cs" />
     <Compile Include="Controls\CodeRenderer\CodeRenderer.Properties.cs" />
@@ -460,7 +460,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="SamplePages\DropShadow\DropShadowPage.xaml">
+    <Page Include="SamplePages\DropShadowPanel\DropShadowPanelPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
