--- a/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
+++ b/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
@@ -53,6 +53,10 @@
     <Compile Include="Helpers\ColorHelper.cs" />
     <Compile Include="Helpers\ConnectionHelper.cs" />
     <Compile Include="Helpers\StorageFileHelper.cs" />
+    <Compile Include="Helpers\Storage\BaseStorageService.cs" />
+    <Compile Include="Helpers\Storage\IStorageService.cs" />
+    <Compile Include="Helpers\Storage\LocalStorageService.cs" />
+    <Compile Include="Helpers\Storage\RoamingStorageService.cs" />
     <Compile Include="Helpers\WeakEventListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\StreamHelper.cs" />
